# CRNStudio

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/crnstudio/: __init__.py  model.py  simulation.py
tests/: conftest.py  test_hello.py  test_simulation.py
