[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crnstudio"
version = "0.1.0"
description = "Engineering workbench for chemical reaction networks (CRNs)."
authors = [{ name = "CRNStudio Contributors" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.2",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "ANN", "D"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.isort]
known-first-party = ["crnstudio"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src"]
packages = ["crnstudio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D"]
